fix menu alignment

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -115,7 +115,7 @@
     height: auto;
     width: 100%;
     position: unset;
-    padding: 8px 50px;
+    padding: 0;
     transform: none;
     transition: none;
     background-color: transparent;
